// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <AlmBindingDefinitionFormField
    autoFocus={true}
    help="settings.almintegration.form.name.bitbucketcloud.help"
    id="name.bitbucket"
    maxLength={200}
    onFieldChange={[MockFunction]}
    propKey="key"
    value="key"
  />
  <AlmBindingDefinitionFormField
    help={
      <FormattedMessage
        defaultMessage="settings.almintegration.form.workspace.bitbucketcloud.help"
        id="settings.almintegration.form.workspace.bitbucketcloud.help"
        values={
          Object {
            "example": <React.Fragment>
              https://bitbucket.org/
              <strong>
                {workspace}
              </strong>
              /{repository}
            </React.Fragment>,
          }
        }
      />
    }
    id="workspace.bitbucketcloud"
    isInvalid={false}
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="workspace"
    value="workspace"
  />
  <Alert
    className="big-spacer-top"
    variant="info"
  >
    <FormattedMessage
      defaultMessage="settings.almintegration.bitbucketcloud.info"
      id="settings.almintegration.bitbucketcloud.info"
      values={
        Object {
          "doc_link": <Link
            target="_blank"
            to="/documentation/analysis/bitbucket-cloud-integration/"
          >
            learn_more
          </Link>,
          "oauth": <a
            href="https://support.atlassian.com/bitbucket-cloud/docs/use-oauth-on-bitbucket-cloud/"
            rel="noopener noreferrer"
            target="_blank"
          >
            settings.almintegration.bitbucketcloud.oauth
          </a>,
          "permission": <strong>
            Pull Requests: Read
          </strong>,
        }
      }
    />
  </Alert>
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.oauth_key.bitbucketcloud.help"
    id="client_id.bitbucketcloud"
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="clientId"
    value="client1"
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.oauth_secret.bitbucketcloud.help"
    id="client_secret.bitbucketcloud"
    isSecret={true}
    maxLength={160}
    onFieldChange={[MockFunction]}
    overwriteOnly={true}
    propKey="clientSecret"
    value="**clientsecret**"
  />
</Fragment>
`;

exports[`should render correctly: invalid workspace ID 1`] = `
<Fragment>
  <AlmBindingDefinitionFormField
    autoFocus={true}
    help="settings.almintegration.form.name.bitbucketcloud.help"
    id="name.bitbucket"
    maxLength={200}
    onFieldChange={[MockFunction]}
    propKey="key"
    value="key"
  />
  <AlmBindingDefinitionFormField
    error="settings.almintegration.form.workspace.bitbucketcloud.error"
    help={
      <FormattedMessage
        defaultMessage="settings.almintegration.form.workspace.bitbucketcloud.help"
        id="settings.almintegration.form.workspace.bitbucketcloud.help"
        values={
          Object {
            "example": <React.Fragment>
              https://bitbucket.org/
              <strong>
                {workspace}
              </strong>
              /{repository}
            </React.Fragment>,
          }
        }
      />
    }
    id="workspace.bitbucketcloud"
    isInvalid={true}
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="workspace"
    value="my/workspace"
  />
  <Alert
    className="big-spacer-top"
    variant="info"
  >
    <FormattedMessage
      defaultMessage="settings.almintegration.bitbucketcloud.info"
      id="settings.almintegration.bitbucketcloud.info"
      values={
        Object {
          "doc_link": <Link
            target="_blank"
            to="/documentation/analysis/bitbucket-cloud-integration/"
          >
            learn_more
          </Link>,
          "oauth": <a
            href="https://support.atlassian.com/bitbucket-cloud/docs/use-oauth-on-bitbucket-cloud/"
            rel="noopener noreferrer"
            target="_blank"
          >
            settings.almintegration.bitbucketcloud.oauth
          </a>,
          "permission": <strong>
            Pull Requests: Read
          </strong>,
        }
      }
    />
  </Alert>
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.oauth_key.bitbucketcloud.help"
    id="client_id.bitbucketcloud"
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="clientId"
    value="client1"
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.oauth_secret.bitbucketcloud.help"
    id="client_secret.bitbucketcloud"
    isSecret={true}
    maxLength={160}
    onFieldChange={[MockFunction]}
    overwriteOnly={true}
    propKey="clientSecret"
    value="**clientsecret**"
  />
</Fragment>
`;
